# refdata-catalogue

./: .gitignore  README.md  catalogue.ttl  extract_features.py  labels.ttl  manifest.ttl  pyproject.toml  sdo_mapping.py  sync.py  utils.py
.github/workflows/: pr.yaml  push.yaml  push_mrc.yaml  spatial-load.yaml.yml  sync.yaml  validate.yaml
_background/: agents.ttl  dar-labels.ttl  data-access-rights-labels.ttl  data-roles-annotations.ttl  idn-role-codes-labels.ttl  idn-th-labels.ttl  indigeneity-labels.ttl  labels.ttl  licenses.ttl  rdfs-annotations.ttl  reg-statuses-annotations.ttl  vocdermods-annotations.ttl
data/_background/: catalogue-roles-labels.ttl  vocdefmodes-labels.ttl
data/vocabularies/: aarr.ttl  care.ttl  orgs-indigeneity.ttl
datasets/: get_asgs_iare_iloc.ipynb
datasets/features/: agil-point-locations.trig  apt-places.trig  apt-regions.trig  asgs-is-IREG-part2.trig  atns-entity-areas.trig  capad2020-npa.trig  ilm-austlang.trig
onts/: lc-ont-diagram.md  lc-ont.ttl
scripts/: get_austlang.py  get_tematres.py  label_tematres.py  upload.py  validate.py
sources/: austlang_dataset.csv
validator/: vocpub.ttl
vocabs/: aarr.ttl  agent-systems.ttl  austlang.ttl  care.ttl  catalogue-roles.ttl  data-access-rights.ttl  data-roles.ttl  dummy_file.txt  force_action_run.txt  glossary.ttl  idn-glossary.ttl  idn-role-codes.ttl  idn-th.ttl  indigeneity.ttl  individual-indigeneity.ttl  license.ttl  licenses.ttl  orgs-indigeneity.ttl  oric-industries.ttl  oricIndustries.ttl  persons-indigenous-status.ttl  policy-type.ttl  policy-types.ttl  urbanity.ttl
(+37 files in other folders)
