[tool.poetry]
name = "vocab-data"
version = "0.1.0"
description = ""
authors = ["Lawson Lewis <lawson@kurrawong.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyshacl = "^0.25.0"
rdflib = "^7.0.0"
httpx = "^0.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
